--- a/AppledocSettings.plist
+++ b/AppledocSettings.plist
@@ -46,8 +46,8 @@
 	<string>Readme.markdown</string>
 	<key>--include</key>
 	<array>
-		<string>./docs/Programming Guide-template.markdown</string>
-		<string>./docs/Setup Guide-template.markdown</string>
+		<string>./Documentation/Programming Guide-template.markdown</string>
+		<string>./Documentation/Setup Guide-template.markdown</string>
 	</array>
 	<key>--warn-invalid-crossref</key>
 	<false/>
